--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
   body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -10,14 +9,24 @@
     box-sizing: border-box;
   }
  
-  
+  a {    font-size: 120%;
+    text-shadow: #222 1px 1px;
+font-weight: bolder;
+}
+
 
   .navbar-default {
     background-color: #333;  
+    background: linear-gradient(rgb(132, 129, 125) 10%, rgb(87, 85, 84) 100%);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
     border-color: #222; 
+    border-radius: 0%;
     z-index: 2;
     overflow: visible;
   }
+
+
+  
   .navbar-default .navbar-brand {
     color: #ffffff; 
   }
@@ -37,14 +46,17 @@
     background-color: #ffffff;
   }
   
-  
+  div .section:hover {
+    scale: 101%;
+    box-shadow: 0 2px 10px rgb(255, 232, 139);}
   
   header h1 {
-    font-size: 2em;
+    font-size: 4em;
     margin: 20px 0;
+    font-weight: bold;
+    color: #2d2c2c;
   }
   
- 
   .row {
     width: 100%;
     display: flex;
@@ -56,17 +68,18 @@
 .col {
     border: 1px solid black;
     padding: 5px;
-    margin: 5px;
-    background-color: lightgray;
+    margin: 10px;
+    background: linear-gradient(rgb(162, 159, 155) 10%, rgb(100, 99, 98) 100%);
     text-align: left;
     box-sizing: border-box;
     flex: 1 1 30%; 
-    min-width: 250px;
+    min-width: 350px;
 }
 
-.section {
+.section {border-bottom-left-radius: 15px;
     position: relative;
     padding: 40px 20px 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
 }
 
 .title {
@@ -78,7 +91,10 @@
     color: white;
     padding: 5px 10px;
     font-weight: bold;
+    font-size: 120%;
     border: 1px solid black;
+    text-shadow: #222 2px 2px;
+
 }
     #chicken .title { background-color: #d9534f; }
     #beef .title    { background-color: #2c9fc9; }
@@ -90,7 +106,8 @@
   }
   .navbar-default .navbar-nav > li > a[href="#chicken"]:hover,
   .navbar-default .navbar-nav > li > a[href="#chicken"]:focus {
-    color: #b24742; 
+    color: #b24742; text-decoration: underline;
+
   }
   
 
@@ -99,7 +116,8 @@
   }
   .navbar-default .navbar-nav > li > a[href="#beef"]:hover,
   .navbar-default .navbar-nav > li > a[href="#beef"]:focus {
-    color: #237b90; 
+    color: #237b90; text-decoration: underline;
+ 
   }
   
 
@@ -108,7 +126,8 @@
   }
   .navbar-default .navbar-nav > li > a[href="#sushi"]:hover,
   .navbar-default .navbar-nav > li > a[href="#sushi"]:focus {
-    color: #c48a3a; 
+    color: #c48a3a; text-decoration: underline;
+ 
   }
 
   
@@ -125,6 +144,8 @@
   
   nav a {
     margin-left: 20px;
+    font-size: 150%;
+    text-shadow: #222 1px 1px;
   }
   
   .navbar-collapse::-webkit-scrollbar {
